# krt-wasm

./: .gitignore  README.md  package.json
.github/workflows/: bun-build.yml  bun-pver-release.yml  bun-test.yml
examples/tscircuit-kicad-parity/: README.md  index.circuit.tsx  package.json  tsconfig.json
examples/tscircuit-kicad-parity/src/: krt-autorouter.ts
examples/tscircuit-krt-autorouter/: README.md  index.circuit.tsx  package.json  tsconfig.json
examples/tscircuit-krt-autorouter/src/: krt-autorouter.ts
pkg-node/: grid_router.d.ts  grid_router.js  grid_router_bg.wasm  grid_router_bg.wasm.d.ts
rust_router/: Cargo.toml
rust_router/src/: dubins.rs  lib.rs  obstacle_map.rs  pose_router.rs  router.rs  types.rs  visual_router.rs  wasm.rs
scripts/: embed-wasm-loader.mjs  generate_tscircuit_kicad_parity.py
src/: index.ts
tests/visual-snapshots/: rerouted-subcircuit-board.test.tsx  routed-pinheaders-board.test.tsx
tests/visual-snapshots/fixtures/: routed-pinheaders-board.tsx  svg-snapshot-matcher.ts
